@@ -34,6 +34,7 @@ import alfio.repository.user.AuthorityRepository;
 import alfio.repository.user.OrganizationRepository;
 import alfio.repository.user.UserRepository;
 import alfio.repository.user.join.UserOrganizationRepository;
+import alfio.util.MiscUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.stereotype.Service;
@@ -45,6 +46,7 @@ import java.util.stream.Collectors;
 
 import static alfio.config.authentication.support.AuthenticationConstants.SYSTEM_API_CLIENT;
 import static alfio.manager.user.UserManager.ADMIN_USERNAME;
+import static alfio.util.MiscUtils.removeTabsAndNewlines;
 import static java.util.Objects.requireNonNullElse;
 
 /**
@@ -379,7 +381,7 @@ public class AccessService {
             // user is requesting to remove all subscriptions from event
             return event;
         }
-        var descriptorsId = descriptorsToLink.stream().map(LinkSubscriptionsToEventRequest::getDescriptorId).collect(Collectors.toList());
+        var descriptorsId = descriptorsToLink.stream().map(LinkSubscriptionsToEventRequest::getDescriptorId).toList();
         var count = subscriptionRepository.countDescriptorsBelongingToOrganization(descriptorsId, event.getOrganizationId());
         if (count == null || descriptorsToLink.size() != count) {
             throw new AccessDeniedException();
@@ -530,7 +532,9 @@ public class AccessService {
     public EventAndOrganizationId checkWaitingQueueSubscriberInEvent(Principal principal, int subscriberId, String eventName) {
         var eventAndOrgId = checkEventOwnership(principal, eventName);
         if (!waitingQueueRepository.exists(subscriberId, eventAndOrgId.getId())) {
-            log.warn("subscriberId {} does not exists in event {}", subscriberId, eventName);
+            if (log.isWarnEnabled()) {
+                log.warn("subscriberId {} does not exists in event {}", subscriberId, removeTabsAndNewlines(eventName));
+            }
             throw new AccessDeniedException();
         }
         return eventAndOrgId;
@@ -557,7 +561,9 @@ public class AccessService {
             subscriptionUuid = UUID.fromString(publicIdentifier);
         }
         if (additionalFieldIds.size() != purchaseContextFieldRepository.countMatchingAdditionalFieldsForPurchaseContext(eventId, subscriptionUuid, additionalFieldIds)) {
-            log.warn("Some additional field ids {} are not inside purchaseContext {}", additionalFieldIds, publicIdentifier);
+            if (log.isWarnEnabled()) {
+                log.warn("Some additional field ids {} are not inside purchaseContext {}", additionalFieldIds, removeTabsAndNewlines(publicIdentifier));
+            }
             throw new AccessDeniedException();
         }
     }
@@ -573,7 +579,9 @@ public class AccessService {
     public void checkEventAndReservationOwnership(Principal principal, String eventName, Set<String> reservationIds) {
         var eventAndOrgId = checkEventOwnership(principal, eventName);
         if (reservationIds.size() != reservationRepository.countReservationsWithEventId(reservationIds, eventAndOrgId.getId())) {
-            log.warn("Some reservation ids {} are not in the event {}", reservationIds, eventName);
+            if (log.isWarnEnabled()) {
+                log.warn("Some reservation ids {} are not in the event {}", reservationIds.stream().map(MiscUtils::removeTabsAndNewlines).collect(Collectors.toSet()), removeTabsAndNewlines(eventName));
+            }
             throw new AccessDeniedException();
         }
     }
@@ -581,7 +589,9 @@ public class AccessService {
     public void checkEventAndReservationAndTransactionOwnership(Principal principal, String eventName, String reservationId, int transactionId) {
         checkEventAndReservationOwnership(principal, eventName, Set.of(reservationId));
         if (!reservationRepository.hasReservationWithTransactionId(reservationId, transactionId)) {
-         log.warn("Reservation id {} does not have transaction id {}", reservationId, transactionId);
+            if (log.isWarnEnabled()) {
+                log.warn("Reservation id {} does not have transaction id {}", removeTabsAndNewlines(reservationId), transactionId);
+            }
             throw new AccessDeniedException();
         }
     }
@@ -597,7 +607,9 @@ public class AccessService {
     public void checkEventTicketIdentifierMembership(Principal principal, int eventId, String ticketIdentifier, Set<Role> roles) {
         checkEventMembership(principal, eventId, roles);
         if (!ticketRepository.isTicketInEvent(eventId, ticketIdentifier)) {
-            log.warn("ticket {} is not in eventId {}", ticketIdentifier, eventId);
+            if (log.isWarnEnabled()) {
+                log.warn("ticket {} is not in eventId {}", removeTabsAndNewlines(ticketIdentifier), eventId);
+            }
             throw new AccessDeniedException();
         }
     }
@@ -605,7 +617,9 @@ public class AccessService {
     public EventAndOrganizationId checkEventTicketIdentifierMembership(Principal principal, String eventName, String ticketIdentifier, Set<Role> roles) {
         var eventAndOrgId = checkEventMembership(principal, eventName, roles);
         if (!ticketRepository.isTicketInEvent(eventAndOrgId.getId(), ticketIdentifier)) {
-            log.warn("ticket {} is not in eventId {}", ticketIdentifier, eventAndOrgId.getId());
+            if (log.isWarnEnabled()) {
+                log.warn("ticket {} is not in eventId {}", removeTabsAndNewlines(ticketIdentifier), eventAndOrgId.getId());
+            }
             throw new AccessDeniedException();
         }
         return eventAndOrgId;
